rest api chnages
chnages

--- a/AOCPV/src/main/resources/application.properties
+++ b/AOCPV/src/main/resources/application.properties
@@ -21,12 +21,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 	
 #localhost sql server
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SuryodayDB;encrypt=false;sslProtocol=TLSv1.2;
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=loan_input;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SuryodayDB;encrypt=false;sslProtocol=TLSv1.2;
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=loan_input;encrypt=true;trustServerCertificate=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.datasource.username=akash
-spring.datasource.password=root
+spring.datasource.username=sa
+spring.datasource.password=Vilas@123
 
 #nested exception is javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
 spring.jmx.default-domain=12343
